Fix floating navbar and blurry text

--- a/natsumi/modules/natsumi-urlbar.css
+++ b/natsumi/modules/natsumi-urlbar.css
@@ -634,4 +634,12 @@ their author(s) have been provided above the used code.
       }
     }
   }
+
+  @media not (-moz-bool-pref: "natsumi.theme.disable-blur") {
+    @media not (-moz-bool-pref: "natsumi.urlbar.disable-transparency") {
+      #browser:has(#urlbar[breakout-extend]) browser {
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+      }
+    }
+  }
 }
