--- a/natsumi/modules/patches.css
+++ b/natsumi/modules/patches.css
@@ -29,15 +29,6 @@ their author(s) have been provided above the used code.
 
 /* ==== Pre-style patches ==== */
 
-/* Allow URLbar and Zen Sidebar blurring */
-/* Disable this through config if too much GPU is being used */
-
-@media not (-moz-bool-pref: "natsumi.theme.disable-blur") {
-  browser {
-    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
-  }
-}
-
 :root {
   @media (-moz-platform: macos) {
     /* Patches collapsed view on macOS */
@@ -61,13 +52,6 @@ their author(s) have been provided above the used code.
   &[inDOMFullscreen="true"] {
     #zen-sidebar-top-buttons-customization-target {
       padding-top: 3px !important;
-    }
-
-    @media not (-moz-bool-pref: "natsumi.theme.disable-blur") {
-      browser {
-        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
-        border-radius: 0 !important;
-      }
     }
   }
 
